# bist-orderbook-analysis

./: .gitignore  CHANGELOG.md  README.md  app.py  pyproject.toml
config/: bist50_2026_q2.csv  bist50_front_month_20260427.csv  symbol_pairs.csv
docs/: analysis-methodology.md  full-capture-validation.md  performance.md  requirements-traceability.md
src/bist_orderbook/: __init__.py  __main__.py  analysis.py  analysis_cache.py  book.py  capture.py  cli.py  dashboard.py  discovery.py  domain.py  ingestion.py  itch.py  moldudp64.py  protocol.py  query.py  scope.py  storage.py
tests/: test_analysis.py  test_analysis_cache.py  test_book.py  test_capture.py  test_dashboard.py  test_discovery.py  test_domain.py  test_ingestion.py  test_itch.py  test_moldudp64.py  test_query.py  test_scope.py  test_storage.py
